--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<a [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a>
-<a [routerLink]="['/about']">About</a>
+<a [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a> |
+<a [routerLink]="['/about']">About</a> |
+<a [routerLink]="['/logins']">logins</a> |
+<a [routerLink]="['/app-reactive-form']">reactive-form</a>
 <router-outlet></router-outlet>
