--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,9 @@
 <p>about works!</p>
+<button (click)="TangTuoi()">Tăng Tuổi</button>
+<h2>Tuổi của bạn là {{ age }} tuổi</h2>
+
+
+<span *ngIf="age < 18; then condition1; else condition2"></span>
+<ng-template #condition1 class="d18">Bạn chưa đủ tuổi vị thành niên: {{ age }}</ng-template>
+<ng-template #condition2 class="t18">Bạn đã đủ tuổi vị thành niên: {{ age}}</ng-template>
+<br>
