--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,1 +1,23 @@
 <p>reactive-form works!</p>
+<form class="row g-3" [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+    <div class="col-auto">
+      <label for="inputPassword2" class="visually">Email</label>
+      <input required formControlName="username" name="username" type="text" class="form-control" id="username" placeholder="UserName">
+      <span *ngIf="profileForm.value.username ===''" class="errormes">* Cần phải nhập mật khẩu</span>
+    </div>
+    <div class="col-auto">
+      <label for="inputPassword2" class="visually">Password</label>
+      <input required formControlName="password" name="password" type="password" class="form-control" id="password" placeholder="Password">
+      <span *ngIf="profileForm.value.password ===''" class="errormes">* Cần phải nhập mật khẩu</span>
+    </div>
+    <div class="col-auto">
+        <label for="inputPassword2" class="visually">Lựa chọn</label>
+        <select formControlName="students">
+            <option value="0">---Lựa chọn---</option>
+            <option *ngFor="let item of students">{{ item }}</option>
+        </select>
+      </div>
+    <div class="col-auto">
+      <button type="submit" class="btn btn-primary mb-3" [disabled]="!profileForm.valid">Confirm</button>
+    </div>
+  </form>
