--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <a [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a> |
 <a [routerLink]="['/about']">About</a> |
 <a [routerLink]="['/logins']">logins</a> |
-<a [routerLink]="['/app-reactive-form']">reactive-form</a>
+<a [routerLink]="['/app-reactive-form']">reactive-form</a> |
+<a [routerLink]="['/app-demologin']">Demologin</a>
 <router-outlet></router-outlet>
